# VoiceStar

./: README.md  inference_gradio.py  pyproject.toml
