[project]
name = "voicestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.4",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "fire>=0.7.0",
    "gradio==3.36.0",
    "huggingface-hub>=0.32.2",
    "markupsafe==2.1.3",
    "matplotlib>=3.10.3",
    "numpy>=2.1.2",
    "omegaconf==2.3.0",
    "openai-whisper>=20240930",
    "phonemizer==3.2.1",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "tensorboard>=2.19.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchmetrics>=1.0.3",
    "tqdm>=4.66.5",
    "wandb>=0.19.11",
]

[tool.uv]
override-dependencies = [
    "triton; sys_platform == 'never'",
    ]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
default = false
